@@ -244,7 +244,7 @@ output_widget_signal (FILE *fp,
   gchar signal_name[128];
 
 
-  /*  g_print ("Object: %s Type: %i Signal: %u\n", object_name, object_type,
+  /*  g_print ("Object: %s Type: %i Signal: %u\\n", object_name, object_type,
       signal_id);*/
 
   param_num = 1;
@@ -271,7 +271,7 @@ output_widget_signal (FILE *fp,
       object_arg = object_name;
 
   object_arg_start = pos;
-  sprintf (pos, "*%s\n", object_arg);
+  sprintf (pos, "*%s\\n", object_arg);
   pos += strlen (pos);
   g_strdown (object_arg_start);
   if (!strcmp (object_arg_start, "widget"))
@@ -292,7 +292,7 @@ output_widget_signal (FILE *fp,
     {
       if (arg_names)
 	{
-	  sprintf (pos, "%s\n", arg_names[param]);
+	  sprintf (pos, "%s\\n", arg_names[param]);
 	  pos += strlen (pos);
 	}
       else
@@ -330,9 +330,9 @@ output_widget_signal (FILE *fp,
 	  pos += strlen (pos);
 
 	  if (!arg_num || *arg_num == 0)
-	    sprintf (pos, "%s%s\n", is_pointer ? "*" : " ", arg_name);
+	    sprintf (pos, "%s%s\\n", is_pointer ? "*" : " ", arg_name);
 	  else
-	    sprintf (pos, "%s%s%i\n", is_pointer ? "*" : " ", arg_name,
+	    sprintf (pos, "%s%s%i\\n", is_pointer ? "*" : " ", arg_name,
 		     *arg_num);
 	      pos += strlen (pos);
 	      
@@ -342,7 +342,7 @@ output_widget_signal (FILE *fp,
     }
   
   fprintf (fp,
-	   "<SIGNAL>\n<NAME>%s::%s</NAME>\n<RETURNS>%s</RETURNS>\n%s</SIGNAL>\n\n",
+	   "<SIGNAL>\\n<NAME>%s::%s</NAME>\\n<RETURNS>%s</RETURNS>\\n%s</SIGNAL>\\n\\n",
 	   object_name, query_info.signal_name, ret_type_buffer, buffer);
 }
 
@@ -709,7 +709,7 @@ output_hierarchy (FILE  *fp,
   for (i = 0; i < level; i++)
     fprintf (fp, "  ");
   fprintf (fp, g_type_name (type));
-  fprintf (fp, "\n");
+  fprintf (fp, "\\n");
 
   children = g_type_children (type, &n_children);
   
@@ -777,7 +777,7 @@ output_widget_args (FILE *fp, GType object_type)
 	*pos++ = 'X';
       *pos = 0;
 
-      fprintf (fp, "<ARG>\n<NAME>%s::%s</NAME>\n<TYPE>%s</TYPE>\n<FLAGS>%s</FLAGS>\n</ARG>\n\n",
+      fprintf (fp, "<ARG>\\n<NAME>%s::%s</NAME>\\n<TYPE>%s</TYPE>\\n<FLAGS>%s</FLAGS>\\n</ARG>\\n\\n",
 	       object_class_name, spec->name, g_type_name (spec->value_type), flags);
     }
 
