@@ -206,7 +206,7 @@ output_widget_signals (FILE *fp, GtkType object_type)
     {
       if (!class->signals[sig])
         {
-          /*g_print ("Signal slot [%u] is empty\n", sig);*/
+          /*g_print ("Signal slot [%u] is empty\\n", sig);*/
           continue;
         }
 
@@ -234,7 +234,7 @@ output_widget_signal (FILE *fp,
   gchar signal_name[128];
 
 
-  /*  g_print ("Object: %s Type: %i Signal: %u\n", object_name, object_type,
+  /*  g_print ("Object: %s Type: %i Signal: %u\\n", object_name, object_type,
       signal_id);*/
 
   param_num = 1;
@@ -266,7 +266,7 @@ output_widget_signal (FILE *fp,
       object_arg = object_name;
 
   object_arg_start = pos;
-  sprintf (pos, "*%s\n", object_arg);
+  sprintf (pos, "*%s\\n", object_arg);
   pos += strlen (pos);
   g_strdown (object_arg_start);
   if (!strcmp (object_arg_start, "widget"))
@@ -287,7 +287,7 @@ output_widget_signal (FILE *fp,
     {
       if (arg_names)
 	{
-	  sprintf (pos, "%s\n", arg_names[param]);
+	  sprintf (pos, "%s\\n", arg_names[param]);
 	  pos += strlen (pos);
 	}
       else
@@ -325,9 +325,9 @@ output_widget_signal (FILE *fp,
 	  pos += strlen (pos);
 
 	  if (!arg_num || *arg_num == 0)
-	    sprintf (pos, "%s%s\n", is_pointer ? "*" : " ", arg_name);
+	    sprintf (pos, "%s%s\\n", is_pointer ? "*" : " ", arg_name);
 	  else
-	    sprintf (pos, "%s%s%i\n", is_pointer ? "*" : " ", arg_name,
+	    sprintf (pos, "%s%s%i\\n", is_pointer ? "*" : " ", arg_name,
 		     *arg_num);
 	      pos += strlen (pos);
 	      
@@ -337,7 +337,7 @@ output_widget_signal (FILE *fp,
     }
   
   fprintf (fp,
-	   "<SIGNAL>\n<NAME>%s::%s</NAME>\n<RETURNS>%s</RETURNS>\n%s</SIGNAL>\n\n",
+	   "<SIGNAL>\\n<NAME>%s::%s</NAME>\\n<RETURNS>%s</RETURNS>\\n%s</SIGNAL>\\n\\n",
 	   object_name, query_info->signal_name, ret_type_buffer, buffer);
   g_free (query_info);
 }
@@ -714,7 +714,7 @@ output_hierarchy (FILE *fp,
   for (i = 0; i < level; i++)
     fprintf (fp, "  ");
   fprintf (fp, gtk_type_name (type));
-  fprintf (fp, "\n");
+  fprintf (fp, "\\n");
 
   list = gtk_type_children_types (type);
 
@@ -782,7 +782,7 @@ output_widget_args (FILE *fp, GtkType object_type)
 	*pos++ = 'c';
       *pos = 0;
 
-      fprintf (fp, "<ARG>\n<NAME>%s</NAME>\n<TYPE>%s</TYPE>\n<FLAGS>%s</FLAGS>\n</ARG>\n\n",
+      fprintf (fp, "<ARG>\\n<NAME>%s</NAME>\\n<TYPE>%s</TYPE>\\n<FLAGS>%s</FLAGS>\\n</ARG>\\n\\n",
 	       args[arg].name, gtk_type_name (args[arg].type), flags);
     }
 
