@@ -1,3 +1,9 @@
+2001-08-14  Laszlo Peter  <laca@ireland.sun.com>
+
+	* gtkdoc-scanobj.in:
+	* gtkdoc-scangobj.in: change \n's to \\n's in perl scripts
+	generating C code.
+
 2001-08-12  Jens Finke <jens@gnome.org>
 	
 	* Updated gtk-doc.spec.in file to match gpp standard.
